# TrendForge

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/core/: config.py
backend/app/services/ingestion/: data_pool.py
backend/app/services/ingestion/normalizer/: dead_letter.py  deduplication.py  engagement.py  language_detection.py  parsers.py  pipeline.py  post_schema.py
backend/app/services/ingestion/scrapers/: base.py  instagram.py  tiktok.py  youtube.py
backend/scripts/: verify_data_pool_live.py
backend/tests/unit/: test_data_pool.py  test_dead_letter.py  test_engagement.py  test_language_detection.py  test_parsers.py  test_pipeline.py  test_platform_scrapers.py  test_post_schema.py  test_scrapecreators_client.py
engineering/: README.md  data-normalizer.md
frontend/: Dockerfile  package.json
prompts/caption_generation/: few_shot_examples.md  output_schema.json  system_prompt.md
prompts/detection/: few_shot_examples.md  system_prompt.md
prompts/image_prompt_generation/: output_schema.json  system_prompt.md
prompts/quality_gate/: safety_prompt.md
prompts/tco_builder/: summarization_prompt.md
workers/: .dockerignore  Dockerfile  pyproject.toml
