[project]
name = "trendforge-backend"
version = "0.1.0"
description = "TrendForge FastAPI backend — API, domain services, and data models"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "celery>=5.4",
    "redis>=5.1",
    "anthropic>=0.39",
    "boto3>=1.35",
    "slack-bolt>=1.21",
    "sentence-transformers>=3.2",
    "fasttext-wheel>=0.9.2",
    "httpx>=0.27",
    "python-jose[cryptography]>=3.3",
    "tenacity>=9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
